@@ -1,5 +1,10 @@
 2004-12-28  Daniel Henninger  <jadestorm@nc.rr.com>
 
+	* src/legacy/icqt.py:
+	* src/tlib/oscar.py:
+	* src/config_example.py:
+	Added setProfile command as well as capability to do cross-im chat.
+
 	* src/legacy/glue.py:
 	* src/legacy/icqt.py:
 	* src/tlib/oscar.py:
